# xlang

./: .gitignore  Cargo.toml  LICENCE.txt  README.md  linked_list.x  test.sh  test.xl
.github/workflows/: rust.yml
examples/compile_fail/: var_not_found.x  var_not_found.xl
examples/compile_pass/: block_scope.xl  enum.x  enum.xl  for_range.xl  if_stmt.xl  inline_c.xl  linked_list.x  linked_list.xl  loop_stmt.xl  ternary_expr.x  ternary_expr.xl  vector.x  vector.xl  while_loop.x  while_loop.xl
src/: ast.rs  codegen.rs  const_eval.rs  error_context.rs  frontend.rs  generics.rs  intern.rs  ir.rs  ir_display.rs  ir_gen.rs  lexer.rs  macro_expansion.rs  main.rs  mod_gen.rs  monomorphize.rs  parser.lalrpop  symbol.rs  ty.rs  ty_mangle.rs  type_check.rs
src/infer/: mod.rs  solve.rs
src/ir/: ir_build.rs  ir_display.rs  mod.rs
src/ir_gen/: ir_gen_match.rs  mod.rs
src/tir/: ast_lower.rs  mod.rs  tir_infer.rs  visit.rs
src/tir_lower/: case.rs  expr.rs  helpers.rs  mod.rs  scope.rs  stmt.rs
stl/: check.xl  maybe.xl  mem.xl  vec.xl
stl/c/xlang/: check.c  default_header.h  externed.c
