[package]
name = "xlang"
version = "0.1.0"
edition = "2021"
build = "build.rs"
authors = ["Zachary Mayhew <mayhew.zachary2003@gmail.com>"]
license = "MIT"
repository = "https://github.com/zacklukem/xlang"


[build-dependencies]
lalrpop = { version = "0.19.7", features = ["lexer"],  default-features = true }

[dependencies]
either = "1.6.1"
lalrpop-util = { version = "0.19.7", features = ["lexer"] }
regex = "1"
clap = { version = "3.1.3", features = ["derive"] }
log = { version = "0.4" }
env_logger = "0.9.0"
